feat(backend): implementa exclusão em cascata e configura timezone
- Adiciona exclusão em cascata ao deletar pet (desativa schedules, vaccines e prescriptions)
- Adiciona método findByPetIdAndActiveTrue no ScheduleRepository
- Configura timezone America/Sao_Paulo no application.properties
- Melhora integridade referencial dos dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=zooracoes-api
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/zooracoes
-spring.datasource.username=admin
-spring.datasource.password=admin123
+# URL do Render PostgreSQL
+spring.datasource.url=jdbc:postgresql://dpg-d4n8ekre5dus738uhg5g-a.oregon-postgres.render.com:5432/bancozooracoes?sslmode=require
+spring.datasource.username=bancozooracoes_user
+spring.datasource.password=OxY1U5XmANYCO6NLkHUrskZUL7eofhOa
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -35,3 +36,7 @@ zooracoes.seed-enabled=true
 # Logging Configuration
 logging.level.com.zooracoes_api.security=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Timezone Configuration
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
